--- a/product.yml
+++ b/product.yml
@@ -31,7 +31,7 @@ provision:
   - systempath: "{% mysqlHome %}/bin"
   - folder: /etc/my.cnf.d
   - copy:
-      from: "{{ .templates }}/my.cnf"
+      template: my.cnf
       todir: /etc
       after: cd {% mysqlHome %} && ./scripts/mysql_install_db --user=mysql
   - permission:
